# sysintegration

./: .gitignore  README.md
NewTask/: NewTask.cs
Tours/: README.md
Tours/admin-app/: Cargo.toml
Tours/admin-app/src/: main.rs
Tours/back-office/: Cargo.toml
Tours/back-office/src/: main.rs
Tours/email-service/: Cargo.toml
Tours/email-service/src/: main.rs
Tours/frontend-app/: package-lock.json  package.json
Tours/frontend-app/src/: App.vue
Tours/frontend-app/src/components/: BookForm.vue
Tours/tours-web-app/: Cargo.toml
Tours/tours-web-app/src/: main.rs
Worker/: Worker.cs
aggregator/aggregate-receiver/: Cargo.toml
aggregator/aggregate-receiver/src/: main.rs
dynamic-routing/: .env  README.md  docker-compose.yml  rabbit-infrastructure.cfg  setup.sh
dynamic-routing/consumer/src/: main.rs
dynamic-routing/deprecated/: .gitignore
dynamic-routing/deprecated/consumer/: Cargo.toml
dynamic-routing/deprecated/infrastructure/: Dockerfile
dynamic-routing/deprecated/producer/: Cargo.toml
dynamic-routing/deprecated/producer/src/: main.rs
dynamic-routing/infrastructure/: Dockerfile  init.sh
dynamic-routing/load-balancer/: Cargo.toml
dynamic-routing/load-balancer/src/: main.rs
dynamic-routing/producer/: Dockerfile
dynamic-routing/producer/src/: Dockerfile  main.rs
resequencer/resequencer-app/: Cargo.toml  README.md
resequencer/resequencer-app/src/: main.rs
resequencing-example/producer/: Cargo.toml
resequencing-example/producer/src/: main.rs
rr-pattern/req-app/: Cargo.toml
rr-pattern/req-app/src/: main.rs
rr-pattern/res-app/: Cargo.toml
rr-pattern/res-app/src/: main.rs
rust-lapin-producer/: Cargo.toml
rust-lapin-producer/src/: main.rs
