[package]
name = "tours-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
# Below is CORS policy configure crate but was hard to set up in this project
# rocket_cors = "0.5.1"
# RabbitMQ framework, default-features off means no TLS
amiquip = { version = "0.4", default-features = false }
# serializing framework https://github.com/serde-rs/serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"