[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = { version = "2" }
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.0"
uuid = { version = "1.4.1", features = ["v4","fast-rng","macro-diagnostics",]}
rand = "0.8.5"